[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "savdocs-py"
version = "0.1.0"
description = "Quick reminders of how to write commands from different pacakges"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Mohammad Savarmand" }
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/mohammadsav/savtools-py"
Issues = "https://github.com/mohammadsav/savtools-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/savdocs"]
